--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,7 +34,8 @@ jobs:
           set -euo pipefail
 
           go mod tidy
-          go clean --testcache; make test-unit
+          go clean --testcache; 
+          ./test.sh
 
           echo "${TARGET}"
           case "${TARGET}" in
