--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -8,13 +8,24 @@ jobs:
     with:
       arch: amd64
       runs-on: ubuntu-latest
-  amd64-macos:
-    uses: ./.github/workflows/tests-template.yaml
-    with:
-      arch: amd64
-      runs-on: macos-latest
   arm64:
     uses: ./.github/workflows/tests-template.yaml
     with:
       arch: arm64
       runs-on: actuated-arm64-8cpu-8gb
+
+  macos:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+    - id: goversion
+      run: echo "goversion=$(cat .go-version)" >> "$GITHUB_OUTPUT"
+    - uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491 # v5.0.0
+      with:
+        go-version: ${{ steps.goversion.outputs.goversion }}
+    - env:
+        TARGET: ${{ matrix.target }}
+      run: |
+        set -euo pipefail
+        go clean -testcache
+        make test-unit
