--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -7,7 +7,7 @@ jobs:
     uses: ./.github/workflows/tests-template.yaml
     with:
       arch: amd64
-      runs-on: ubuntu-latest
+      runs-on: macos-latest #ubuntu-latest
   arm64:
     uses: ./.github/workflows/tests-template.yaml
     with:
